Add nrfxlib-sys as the shared crate
Signed-off-by: Haobo Gu <haobogu@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ members = [
     "nrf-mpsl-sys",
     "nrf-sdc",
     "nrf-sdc-sys",
+    "nrfxlib-sys",
 ]
 
 [profile.dev]
-opt-level = 1               # Use slightly better optimizations.
+opt-level = 1 # Use slightly better optimizations.
 
 [profile.release]
 codegen-units = 1
