--- a/nrf-mpsl-sys/Cargo.toml
+++ b/nrf-mpsl-sys/Cargo.toml
@@ -8,24 +8,6 @@ repository = "https://github.com/alexmoon/nrf-sdc"
 version = "0.2.1"
 rust-version = "1.77"
 
-# Linked name in build.rs
-links = "nrf-mpsl-sys"
-
-include = [
-    "./*.md",
-    "build.rs",
-    "src/**",
-    "include/**",
-    "third_party/arm/CMSIS_5/LICENSE.txt",
-    "third_party/arm/CMSIS_5/CMSIS/Core/Include/**",
-    "third_party/nordic/nrfx/LICENSE",
-    "third_party/nordic/nrfx/mdk/*.h",
-    "third_party/nordic/nrfxlib/LICENSE",
-    "third_party/nordic/nrfxlib/mpsl/**",
-    "third_party/nordic/nrfxlib/softdevice_controller/include/**",
-    "third_party/nordic/nrfxlib/softdevice_controller/lib/**"
-]
-
 [features]
 nrf52 = []
 nrf53 = []
@@ -44,6 +26,7 @@ default-target = "thumbv7em-none-eabihf"
 targets = ["thumbv7em-none-eabihf"]
 
 [dependencies]
+nrfxlib-sys = { version = "0.1.0", path = "../nrfxlib-sys" }
 
 [build-dependencies]
 bindgen = "0.72.0"
